# EatBot

./: .gitignore  DEV.md  README.md  config.shared.toml  main.py  pyproject.toml  权限.json
docs/: 飞书真实环境联调手册.md
src/eatbot/: app.py  config.py
src/eatbot/adapters/: __init__.py  feishu_clients.py  ws_client.py
src/eatbot/domain/: __init__.py  cards.py  decision.py  models.py
src/eatbot/services/: __init__.py  booking.py  repositories.py
tests/: test_app_cli.py  test_booking_mock.py  test_cards.py  test_config.py  test_decision.py  test_field_mapping_resolver.py  test_im_adapter.py  test_repositories_conflict.py
